clap_derive/tests/ui/subcommand_and_parse.stderr
error: parse attribute is not allowed for subcommand
  --> $DIR/subcommand_and_parse.rs:16:24
   |
16 |     #[clap(subcommand, parse(from_occurrences))]
   |                        ^^^^^

error[E0277]: the trait bound `MakeCookie: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/subcommand_and_parse.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `MakeCookie`
